fixing menu overflow

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -189,7 +189,7 @@ a {
         top: 0;
         height: 100px;
         overflow-x: hidden;
-        
+        position: fixed;
         
 
     }
@@ -385,8 +385,8 @@ a {
     height: 350px;
     flex-wrap: nowrap;
     width: 100%;
-    margin-top: 50px;
-    
+    margin-top: 100px;
+    padding: 20px;
 
     .about-hero-content {
         max-width: 400px;
@@ -469,11 +469,17 @@ section {
     width: 100%;
     height: 100%;
     align-self: flex-end;
-    
+    padding: 20px;
 }
 
 
-
+.button-about {
+    padding: 15px 20px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
 
 
 
